# neural-network

./: README.md  pyproject.toml
neural_network/: __init__.py  activations.py  loss_function.py  neural_network.py
tests/: mnist.ipynb
