[tool.poetry]
name = "neural_network"
version = "1.0"
description = "Basic implementation for artificial neural network"
authors = ["Adi Koch"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
